tests/baselines/reference/collisionExportsRequireAndAmbientFunctionInGlobalFile.errors.txt
collisionExportsRequireAndAmbientFunctionInGlobalFile.ts(3,9): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
collisionExportsRequireAndAmbientFunctionInGlobalFile.ts(7,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.


==== collisionExportsRequireAndAmbientFunctionInGlobalFile.ts (2 errors) ====
    declare function exports(): number;
    declare function require(): string;
    declare module m3 {
            ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        function exports(): string[];
        function require(): number[];
    }
    module m4 {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        export declare function exports(): string;
        export declare function require(): string;
        var a = 10;
    }